--- a/Content/Mechanical Assembly.tex
+++ b/Content/Mechanical Assembly.tex
@@ -299,8 +299,9 @@ Other cable management features were modified due to print defects. In some narr
 %\end{itemize}
 
 Some safety considerations were taken during the assembly process.
-Appling forces on differnt part of the robot to make sure that the clearance between the parts is enough to avoid the parts touching each other during the robot movement.The clearance between the hip knee links and the wheel motor covers was 2 mm, the clearance between hip knee links and wheel knee links was 2 mm.
-Soldering iron was used to insert the thread inserts into the chassis, so the soldering iron was kept away from the chassis to avoid damaging it. Considering that long wires would trip the robot and short wires would not allow the robot to move freely and may damage the wires, the wires were cut to the required length to avoid these problems.
+Applying forces on different parts of the robot to make sure that the clearance between the parts is enough to avoid the parts touching each other during the robot movement.The clearance between the hip knee links and the wheel motor covers was 2 mm, the clearance between hip knee links and wheel knee links was 2 mm.
+Soldering iron was used to insert the thread inserts into the chassis, so the soldering iron was kept away from the chassis to avoid damaging it.
+Considering that long wires would trip the robot and short wires would not allow the robot to move freely and may damage the wires, the wires were cut to the required length to avoid these problems.
 %\begin{notebox}
 %	the bolts used the problem to shorten them so that it wouldn't touch the motor
 %\end{notebox}
