--- a/Content/Mechanical Design.tex
+++ b/Content/Mechanical Design.tex
@@ -32,7 +32,7 @@ two designs where considered for the legs, the normal joint leg and the complian
 	\centering
 	\includegraphics[width=1\linewidth]{Conceptual Design}
 	%\includegraphics[width=0.5\linewidth]{Figures/Mechanical Design/Conceptual_Design}
-	\caption[Initial Design Concepts]{Three initial Design Concepts for the robot body}
+	\caption[Initial Design Concepts]{Three Initial Design Concepts for the robot}
 	\label{fig:initialdesigns}
 \end{figure}
 Two main designs where considered for the legs as shown in the figure \ref{fig:legdesignsjbhi}, the normal joint leg and the compliant leg.
@@ -54,7 +54,7 @@ The compliant leg is more flexible and can be used to absorb the shock from the 
 %figure for the schmatic overview of the robot
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\linewidth]{schmatic overview of the robot}
+	\includegraphics[width=0.5\linewidth]{Schmatic Overview of the robot}
 	\caption[schmatic overview of the robot]{schmatic overview of the robot}
 	\label{fig:schmaticoverviewoftherobot}
 \end{figure}
@@ -80,10 +80,10 @@ The summation of the torques around point x should be equal to zero to maintain 
 	\sum_{i=1}^{n} \tau_{i}=0
 \end{equation}
 \begin{equation}
-	\sum_{i=1}^{n} \tau_{i}=m_{B}gI-m_{K}g(0.7)D
+	\sum_{i=1}^{n} \tau_{i}=m_{\mathrm{B}}gI-m_{\mathrm{K}}g(0.7)D
 \end{equation}
 \begin{equation}
-	\sum_{i=1}^{n} \tau_{i}=0.704(9.81)(0.03)-0.2(9.81)(0.7)(0.15)\approx0 \mathrm{Nm}
+	\sum_{i=1}^{n} \tau_{i}=0.704(9.81)(0.03)-0.2(9.81)(0.7)(0.15)\approx0\,\mathrm{Nm}
 \end{equation}
 The Lengths of D and I can be modified to make sure that the summation of the torques around point x is equal or approximately equal to zero.
 This will make sure that the robot can balance itself with minimum wheel motor torque.
@@ -91,10 +91,10 @@ The torques can cancel each other out by readjusting the lengths of D or I and a
 
 The torque required to lift the body is calculated around the knee joint point y as follows:
 \begin{equation}
-	\sum_{i=1}^{n} \tau_{i}=m_{B}g(D+I)-m_{K}g(0.3)D
+	\sum_{i=1}^{n} \tau_{i}=m_{\mathrm{B}}g(D+I)-m_{\mathrm{K}}g(0.3)D
 \end{equation}
 \begin{equation}
-	\sum_{i=1}^{n} \tau_{i}=0.704(9.81)(0.03+0.15)-0.2(9.81)(0.3)(0.15) \approx 1.154 \mathrm{Nm}
+	\sum_{i=1}^{n} \tau_{i}=0.704(9.81)(0.03+0.15)-0.2(9.81)(0.3)(0.15) \approx 1.154 \,\mathrm{Nm}
 \end{equation}
 1.154 $\mathrm{Nm}$ is the minimum torque required to hold the body in position.
 The Knee motor should be able to generate more torque to be able to lift the body and change the knee angle.
@@ -102,21 +102,21 @@ The Knee motor should be able to generate more torque to be able to lift the bod
 The approximate masses of the body and the legs are estimated in the table\ref{tab:initialcalculationsassumptions}.
 After manufacturing the parts and assembling the robot, the actual masses of the body and the legs are measured and the calculations are updated accordingly.
 \begin{table}[h]
-	\centering
-	\caption{Initial Calculations Assumptions}
-	\label{tab:initialcalculationsassumptions}
-	\begin{tabular}{lcl}
-		\toprule
-		Parameter & Value & Description 			  \\
-		\midrule
-		$m_B$         & 0.704 kg  & Mass of the body  \\
-		$m_K$         & 0.2 kg  & Mass of the Knee including the two legs\\
-		$L_1$         & 0.15 m   & Length of Link 1  \\
-		$L_2$         & 0.15 m   & Length of Link 2   \\
-		$D$ 	  	  & 0.03 m   & distance from the Wheel axis to the center of mass of leg \\
-		$I$ 	  	  & 0.03 m   & distance from the hip joint axis to the center of mass of the body   \\
-		\bottomrule
-	\end{tabular}
+    \centering
+    \caption{Initial Calculations Assumptions}
+    \label{tab:initialcalculationsassumptions}
+    \begin{tabular}{lcl}
+        \toprule
+        Parameter & Value & Description \\
+        \midrule
+        $m_{\mathrm{B}}$         & 0.704\,kg  & Mass of the body \\
+        $m_{\mathrm{K}}$         & 0.2\,kg    & Mass of the Knee including the two legs \\
+        $L_1$                    & 0.15\,m    & Length of Link 1 \\
+        $L_2$                    & 0.15\,m    & Length of Link 2 \\
+        $D$                      & 0.03\,m    & Distance from the Wheel axis to the center of mass of leg \\
+        $I$                      & 0.03\,m    & Distance from the hip joint axis to the center of mass of the body \\
+        \bottomrule
+    \end{tabular}
 \end{table}
 
 \begin{notebox}
@@ -140,7 +140,9 @@ After manufacturing the parts and assembling the robot, the actual masses of the
 % Elaborate on the development of the detailed mechanical design.
 Throughout the design process, modularity and ease of assembly were considered.
 The design was broken down into three main parts: the body, the hip-knee link, and the knee-wheel link.
-Print iterations were made to ensure that the parts fit together and that the robot could be assembled with ease. Modifications were made to simplify the printing process and reduce the support material used.
+Print iterations were made to ensure that the parts fit together and that the robot could be assembled with ease.
+Modifications were made to simplify the printing process and reduce the support material used.
+Detailed technical drawing figures with dimensions for the fully assembled robot are shown at the end of the chapter in \ref{fig:robotassemblyv2side} \ref{fig:robotassemblyv2top}.
 
 
 \subsection{Body Design}
@@ -153,14 +155,14 @@ Opening slots were to one side of the body to be able to access the boards and c
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Body_Design_1}
-	\caption[TOP view of the Body Design]{TOP view of the Body Design}
+	\caption[Top view of the Body Design]{Top view of the Body Design}
 	\label{fig:bodydesign1}
 \end{figure}
 %figure 2 for the body design
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Body_Design_2}
-	\caption[Side view of the Body Design]{side view of the Body Design}
+	\caption[Side view of the Body Design]{Side view of the Body Design}
 	\label{fig:bodydesign2}
 \end{figure}
 \vspace{10cm}
@@ -182,14 +184,14 @@ The motor housing is designed to ensure the fixed placement of the motor inside 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Body_Knee_Link_1}
-	\caption[TOP view of the Body Knee Link]{TOP view of the Body Knee Link}
+	\caption[Top view of the Body Knee Link]{Top view of the Body Knee Link}
 	\label{fig:bodykneelink1}
 \end{figure}
 %figure 2 for the Body_Knee_link
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Body_Knee_Link_2}
-	\caption[Side view of the Body Knee Link]{side view of the Body Knee Link}
+	\caption[Side view of the Body Knee Link]{Side view of the Body Knee Link}
 	\label{fig:bodykneelink2}
 \end{figure}
 %figure 3 for the Body_Knee_link
@@ -209,14 +211,14 @@ The design of this link includes the wheel motor mounting form one-side and a fr
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Wheel_Knee_Link_1}
-	\caption[SIDE view of the Knee Wheel Link]{SIDE view of the Knee Wheel Link}
+	\caption[Side view of the Knee Wheel Link]{Side view of the Knee Wheel Link}
 	\label{fig:wheelkneelink1}
 \end{figure}
 %figure 2 for the Wheel_Knee_link
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\linewidth]{Wheel_Knee_Link_2}
-	\caption[TOP view of the Knee Wheel Link]{TOP view of the Knee Wheel Link}
+	\caption[Top view of the Knee Wheel Link]{Top view of the Knee Wheel Link}
 	\label{fig:wheelkneelink2}
 \end{figure}
 %figure 3 for the Wheel_Knee_link
@@ -324,18 +326,49 @@ Comparing the dimensions of the robot to the dimensions of the previous TWIPR ro
 Compactness was not a main concern in the design of the robot, the main concern was to make sure that the robot can perform the required movements and interact with the environment.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\linewidth]{Robot_Assembly_V2_Side}
+	\includegraphics[width=\linewidth]{Robot_Assembly_V2_Side}
 	\caption[Side view of the Robot Assembly]{Side view of the Robot Assembly}
 	\label{fig:robotassemblyv2side}
 \end{figure}
+\vspace{4cm}
 %figure for the dimensions of the robot top view
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\linewidth]{Robot_Assembly_V2_Top}
+	\includegraphics[width=\linewidth]{Robot_Assembly_V2_Top}
 	\caption[Top view of the Robot Assembly]{Top view of the Robot Assembly}
 	\label{fig:robotassemblyv2top}
 \end{figure}
-\newpage
+
+% three subfigures side by side of the robot assembly different configurations
+\begin{figure}[h!]
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=.9\linewidth]{Robot_Assembly_V2_position_1}
+		\caption{Robot Assembly Position 1}
+		\label{fig:robotassemblyv2position1}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=.9\linewidth]{Robot_Assembly_V2_position_2}
+		\caption{Robot Assembly Position 2}
+		\label{fig:robotassemblyv2position2}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\includegraphics[width=.9\linewidth]{Robot_Assembly_V2_position_3}
+		\caption{Robot Assembly Position 3}
+		\label{fig:robotassemblyv2position3}
+	\end{subfigure}
+	\caption[Robot Assembly Different Configurations]{Robot Assembly Different Configurations}
+	\label{fig:robotassemblyv2differentconfigurations}
+\end{figure}
+
+The figure above \ref{fig:robotassemblyv2differentconfigurations} shows the different configurations of the robot knee angle.
+In position \ref{fig:robotassemblyv2position1}, the kip axis is aligned with the wheel axis, In position \ref{fig:robotassemblyv2position2}, the knee angle is changed to lift the body, In position \ref{fig:robotassemblyv2position3}, the hip angle is extended to its maximum angle.
+Position \ref{fig:robotassemblyv2position2} and \ref{fig:robotassemblyv2position3} show that the robot's body will move a bit backwards by the control input to maintain the center of gravity of the robot above the wheel axis.
+
+
 \subsection{Safety considerations}
 % the motor cover, the face shield of the body and the body cover
 Safety is a crucial aspect to consider in the design of the robot.
@@ -379,7 +412,7 @@ Design consideration was taken into account to make sure that the robot parts ca
 Considering the limitations of 3D printing technology, the design was modified to make sure that the parts can be printed with acceptable quality.
 The orientation at which the parts are printed was considered while designing the parts.
 Assembly fitting and clearance were considered to make sure that the parts can be assembled with ease.
-
+\newpage
 \section{Prototyping and Iterative Design}
 % Discuss the process of prototyping.
 % Explain how feedback from prototyping phases was incorporated into design revisions.
